syntax = "proto3";

package ext;

import "github.com/rancher/opni/internal/codegen/cli/cli.proto";
import "github.com/rancher/opni/pkg/apis/core/v1/core.proto";
import "google/api/annotations.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/rancher/opni/pkg/test/testdata/plugins/ext";
option (cli.generator) = {
  generate:                        true
  generate_flags_for_all_messages: true
};

service Ext {
  rpc Foo(FooRequest) returns (FooResponse) {
    option (google.api.http) = {
      post: "/foo"
      body: "request"
      additional_bindings {
        get: "/foo"
      }
      additional_bindings {
        put:  "/foo"
        body: "request"
      }
      additional_bindings {
        delete: "/foo"
      }
      additional_bindings {
        patch: "/foo"
        body:  "request"
      }
    };
  }
  rpc Bar(BarRequest) returns (BarResponse) {
    option (google.api.http) = {
      post: "/bar/{param1}/{param2}"
      body: "param3"
      additional_bindings {
        get: "/bar/{param1}/{param2}/{param3}"
      }
    };
  }
  rpc Baz(BazRequest) returns (BazRequest) {
    option (google.api.http) = {
      post: "/baz"
      body: "*"
      additional_bindings {
        post: "/baz/{paramMsg.paramBool}/{paramMsg.paramString}/{paramMsg.paramEnum}"
        body: "*"
      }
      additional_bindings {
        post: "/baz/{paramMsg.paramMsg.paramMsg.paramMsg.paramString}"
        body: "*"
      }
    };
  }
  rpc Set(SetRequest) returns (SetRequest) {
    option (google.api.http) = {
      put: "/set/{node.id}"
      body: "*"

      additional_bindings {
        put:  "/set/example/{node.id}"
        body: "example"
      }
    };
  }
  rpc ServerStream(FooRequest) returns (stream FooResponse);
  rpc ClientStream(stream FooRequest) returns (FooResponse);
  rpc BidirectionalStream(stream FooRequest) returns (stream FooResponse);
}

message Reference {
  string id = 1;
}

message SetRequest {
  Reference    node    = 1;
  string       value   = 2;
  ExampleValue example = 3;
}

message ExampleValue {
  string value = 1;
}

service Ext2 {
  rpc Foo(FooRequest) returns (FooResponse);
}

message FooRequest {
  string request = 1;
}

message FooResponse {
  string response = 1;
}

message BarRequest {
  string param1 = 1;
  string param2 = 2;
  string param3 = 3;
}

message BarResponse {
  string param1 = 1;
  string param2 = 2;
  string param3 = 3;
}

message BazRequest {
  enum BazEnum {
    UNKNOWN = 0;
    FOO     = 1;
    BAR     = 2;
  }
  double                   paramFloat64        = 1;
  int64                    paramInt64          = 3;
  bool                     paramBool           = 8;
  string                   paramString         = 9;
  bytes                    paramBytes          = 10;
  BazEnum                  paramEnum           = 11;
  google.protobuf.Duration paramDuration       = 12;
  repeated string          paramRepeatedString = 13;
  BazRequest               paramMsg            = 14;
}

message SampleConfiguration {
  core.Revision       revision      = 1 [(cli.flag).skip = true];
  optional string     stringField   = 2;
  optional string     secretField   = 3 [(cli.flag).secret = true];
  map<string, string> mapField      = 4;
  repeated string     repeatedField = 5;
  SampleMessage       messageField  = 6;
}

message SampleMessage {
  Sample1FieldMsg field1 = 1;
  Sample2FieldMsg field2 = 2;
  Sample3FieldMsg field3 = 3;
  Sample4FieldMsg field4 = 4;
  Sample5FieldMsg field5 = 5;
  Sample6FieldMsg field6 = 6;

  SampleMessage2 msg = 7;
}

message SampleMessage2 {
  Sample1FieldMsg field1 = 1;
  Sample2FieldMsg field2 = 2;
  Sample3FieldMsg field3 = 3;
  Sample4FieldMsg field4 = 4;
  Sample5FieldMsg field5 = 5;
  Sample6FieldMsg field6 = 6;
}

message Sample1FieldMsg {
  int32 field1 = 1;
}

message Sample2FieldMsg {
  int32 field1 = 1;
  int32 field2 = 2;
}

message Sample3FieldMsg {
  int32 field1 = 1;
  int32 field2 = 2;
  int32 field3 = 3;
}

message Sample4FieldMsg {
  int32 field1 = 1;
  int32 field2 = 2;
  int32 field3 = 3;
  int32 field4 = 4;
}

message Sample5FieldMsg {
  int32 field1 = 1;
  int32 field2 = 2;
  int32 field3 = 3;
  int32 field4 = 4;
  int32 field5 = 5;
}

message Sample6FieldMsg {
  int32 field1 = 1;
  int32 field2 = 2;
  int32 field3 = 3;
  int32 field4 = 4;
  int32 field5 = 5;
  int32 field6 = 6;
}
